--- a/guide.html
+++ b/guide.html
@@ -165,7 +165,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a></strong>
-              <p>80% movement speed on a 10 second cooldown with 3 charges. Compare against <a href="https://www.wowhead.com/spell=121536">retail version</a>.</p>
+              <p>80% movement speed on a 10 second cooldown with 3 charges. Compare against <a href="https://www.wowhead.com/spell=121536">Angelic Feather</a> from Retail.</p>
             </div>
           </div>
 
@@ -307,12 +307,201 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
           T15 Tips
         </h2>
-        <ul class="guide-list">
-          <li>Placeholder — Jin'rokh: Stand in pools for damage buff, multi-dot Focused Lightning orbs.</li>
-          <li>Placeholder — Horridon: Multi-dot add waves aggressively, save cooldowns for Door 3 and Door 4.</li>
-          <li>Placeholder — Council of Elders: Maintain DoTs on all 4 bosses, priority damage on empowered target.</li>
-          <li>Placeholder — Megaera: Spread DoTs across all heads, use Halo for maximum AoE value.</li>
-        </ul>
+        <!-- Last Stand of the Zandalari -->
+        <h3 class="boss-wing-label">Last Stand of the Zandalari</h3>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header active" data-boss="jinrokh">
+            <span class="boss-accordion-name">Jin'rokh the Breaker</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body active" data-boss-body="jinrokh">
+            <ul class="boss-tips">
+              <li>Prepot Potion of the Jade Serpent at 15s and hold your cooldowns.</li>
+              <li>With Bloodlust and Fluidity, use your CDs and 2nd Potion of the Jade Serpent. RNG Unerring Vision of Lei Shen procs.</li>
+              <li>After you clear Ionization, get back into the Fluidity pool quickly and reapply DoTs.</li>
+              <li>Use Vampiric Embrace during Lightning Storm.</li>
+            </ul>
+            <p class="boss-rules">No rules.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="horridon">
+            <span class="boss-accordion-name">Horridon</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="horridon">
+            <ul class="boss-tips">
+              <li>Apply Shadow Word: Pain to small adds. Keep Shadow Word: Pain and Vampiric Touch on marked elite adds.</li>
+              <li>Double DoT the Direhorn Spirit to benefit from the Tier 15 Shadow Priest 2P bonus.</li>
+              <li>Spend Devouring Plague and Mind Flay: Insanity on Horridon.</li>
+              <li>Use Vampiric Embrace during high Bestial Cry stacks.</li>
+            </ul>
+            <p class="boss-rules">Horridon is removed from Damage All Star Points.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="council">
+            <span class="boss-accordion-name">Council of Elders</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="council">
+            <ul class="boss-tips">
+              <li>Stack in melee so you can hit multiple targets with Divine Star on cooldown.</li>
+              <li>Keep DoTs rolling on all bosses and fill with Mind Sear.</li>
+              <li>Recast DoTs when Unerring Vision of Lei Shen procs.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Living Sand is removed.</p>
+          </div>
+        </div>
+
+        <!-- Forgotten Depths -->
+        <h3 class="boss-wing-label">Forgotten Depths</h3>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="tortos">
+            <span class="boss-accordion-name">Tortos</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="tortos">
+            <ul class="boss-tips">
+              <li>Cast Shadow Word: Pain and Shadow Word: Death on adds to trigger Twist of Fate and generate Shadow Orbs.</li>
+              <li>Maintain Shadow Word: Pain on a Humming Crystal for the shield.</li>
+              <li>Stay spread to reduce the chance of being knocked up by the Whirl Turtles.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Humming Crystal is removed. Heroic: Damage done to Vampiric Cave Bat is removed. Only damage done to Whirl Turtles that cast Shell Concussion counts.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="megaera">
+            <span class="boss-accordion-name">Megaera</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="megaera">
+            <ul class="boss-tips">
+              <li>Ignore the Venomous Head.</li>
+              <li>Cast Shadow Word: Death on Nether Wyrms to generate Shadow Orbs.</li>
+              <li>Swap to Divine Star if your raid needs extra healing throughput.</li>
+            </ul>
+            <p class="boss-rules">Damage done to heads that don't die is removed. 25m Heroic: Damage done to Nether Wyrm is removed.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="jikun">
+            <span class="boss-accordion-name">Ji-Kun</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="jikun">
+            <ul class="boss-tips">
+              <li>Use feather charges to intercept Feed Young and gain Primal Nutriment.</li>
+              <li>Cast DoTs on the Nest Guardian. Use Mind Sear and Shadow Word: Death on Hatchlings.</li>
+              <li>Use Vampiric Embrace during Quills if raid is low.</li>
+            </ul>
+            <p class="boss-rules">Ji-Kun is removed from Damage All Star Points.</p>
+          </div>
+        </div>
+
+        <!-- Halls of Flesh-Shaping -->
+        <h3 class="boss-wing-label">Halls of Flesh-Shaping</h3>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="durumu">
+            <span class="boss-accordion-name">Durumu the Forgotten</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="durumu">
+            <ul class="boss-tips">
+              <li>Snipe Crimson Fog adds with Shadow Word: Death for Twist of Fate uptime and Shadow Orbs.</li>
+              <li>Cast Halo and DoTs on the Ice Walls.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Wandering Eye is removed.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="primordius">
+            <span class="boss-accordion-name">Primordius</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="primordius">
+            <ul class="boss-tips">
+              <li>Keep DoTs on all Living Fluids (unless your Warlocks know how to play Affliction).</li>
+              <li>Use Cascade on cooldown.</li>
+              <li>Adjust your camera angle to help dodge puddles and avoid unwanted debuffs.</li>
+            </ul>
+            <p class="boss-rules">Primordius is removed from Damage and Healing All Star Points.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="darkanimus">
+            <span class="boss-accordion-name">Dark Animus</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="darkanimus">
+            <ul class="boss-tips">
+              <li>DoT as many Anima Golems as possible to maintain Twist of Fate.</li>
+              <li>Use Cascade on cooldown for efficient multi-target damage.</li>
+              <li>Focus your Devouring Plague and Mind Flay: Insanity into the boss.</li>
+            </ul>
+            <p class="boss-rules">Heroic: Damage to Large Anima Golem and Massive Anima Golem is removed. Only count damage done to Anima Golems that die.</p>
+          </div>
+        </div>
+
+        <!-- Pinnacle of Storms -->
+        <h3 class="boss-wing-label">Pinnacle of Storms</h3>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="ironqon">
+            <span class="boss-accordion-name">Iron Qon</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="ironqon">
+            <ul class="boss-tips">
+              <li>Recast DoTs on Iron Qon during mount transitions (Ro'shak → Quet'zal → Dam'ren).</li>
+              <li>Hold your 2nd cooldowns and Potion of the Jade Serpent for the final phase, when all four targets are active.</li>
+              <li>Use Vampiric Embrace during Fist Smash if raid is low.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Ice Tomb is removed.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="consorts">
+            <span class="boss-accordion-name">Twin Empyreans</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="consorts">
+            <ul class="boss-tips">
+              <li>Precast Vampiric Touch on Suen then Shadow Word: Pain before she vanishes.</li>
+              <li>Refresh DoTs on Suen during Tears of the Sun.</li>
+              <li>During Nuclear Inferno (boss immune), focus on off-healing. Use Vampiric Embrace when Blazing Radiance stacks get high.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Lurker in the Night is removed.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="leishen">
+            <span class="boss-accordion-name">Lei Shen</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="leishen">
+            <ul class="boss-tips">
+              <li>Use Halo and Mind Sear to handle Ball Lightnings.</li>
+              <li>Snipe low adds with Shadow Word: Death to generate Shadow Orbs.</li>
+              <li>Save your CDs and 2nd Potion of the Jade Serpent for Bloodlust.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Unharnessed Power, Lesser Diffused Lightning, Greater Diffused Lightning, and Diffused Lightning is removed.</p>
+          </div>
+        </div>
+        <div class="boss-accordion">
+          <button class="boss-accordion-header" data-boss="raden">
+            <span class="boss-accordion-name">Ra-den</span>
+            <span class="boss-accordion-chevron">▾</span>
+          </button>
+          <div class="boss-accordion-body" data-boss-body="raden">
+            <ul class="boss-tips">
+              <li>DoT the Crackling Stalker, then burst it with Divine Star and Shadow Word: Death.</li>
+              <li>Snipe the first Essence of Anima with Shadow Word: Death. Burn the remaining ones with Devouring Plague and Mind Flay: Insanity.</li>
+              <li>Sub 40%, use Divine Star on cooldown to help with the HPS check.</li>
+            </ul>
+            <p class="boss-rules">Damage done to Sanguine Horror, Corrupted Anima, Corrupted Vita, and Essence of Vita is removed.</p>
+          </div>
+        </div>
+
       </div>
     </div>
 
