--- a/guide.html
+++ b/guide.html
@@ -356,10 +356,10 @@
           </button>
           <div class="boss-accordion-body active" data-boss-body="jinrokh">
             <ul class="boss-tips">
-              <li>Prepot Potion of the Jade Serpent at 15s and hold your cooldowns.</li>
-              <li>With Bloodlust and Fluidity, use your CDs and 2nd Potion of the Jade Serpent. RNG Unerring Vision of Lei Shen procs.</li>
+              <li>Prepot <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 15s and hold your cooldowns.</li>
+              <li>With Bloodlust and Fluidity, use your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a>. RNG <a href="https://www.wowhead.com/mop-classic/item=95954">Unerring Vision of Lei Shen</a> procs.</li>
               <li>After you clear Ionization, get back into the Fluidity pool quickly and reapply DoTs.</li>
-              <li>Use Vampiric Embrace during Lightning Storm.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during Lightning Storm.</li>
             </ul>
             <p class="boss-rules">No rules.</p>
           </div>
@@ -372,10 +372,10 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="horridon">
             <ul class="boss-tips">
-              <li>Apply Shadow Word: Pain to small adds. Keep Shadow Word: Pain and Vampiric Touch on marked elite adds.</li>
+              <li>Apply <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> to small adds. Keep <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on marked elite adds.</li>
               <li>Double DoT the Direhorn Spirit to benefit from the Tier 15 Shadow Priest 2P bonus.</li>
-              <li>Spend Devouring Plague and Mind Flay: Insanity on Horridon.</li>
-              <li>Use Vampiric Embrace during high Bestial Cry stacks.</li>
+              <li>Spend <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> on Horridon.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during high Bestial Cry stacks.</li>
             </ul>
             <p class="boss-rules">Horridon is removed from Damage All Star Points.</p>
           </div>
@@ -388,9 +388,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="council">
             <ul class="boss-tips">
-              <li>Stack in melee so you can hit multiple targets with Divine Star on cooldown.</li>
-              <li>Keep DoTs rolling on all bosses and fill with Mind Sear.</li>
-              <li>Recast DoTs when Unerring Vision of Lei Shen procs.</li>
+              <li>Stack in melee so you can hit multiple targets with <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on cooldown.</li>
+              <li>Keep DoTs rolling on all bosses and fill with <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a>.</li>
+              <li>Recast DoTs when <a href="https://www.wowhead.com/mop-classic/item=95954">Unerring Vision of Lei Shen</a> procs.</li>
             </ul>
             <p class="boss-rules">Damage done to Living Sand is removed.</p>
           </div>
@@ -406,8 +406,8 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="tortos">
             <ul class="boss-tips">
-              <li>Cast Shadow Word: Pain and Shadow Word: Death on adds to trigger Twist of Fate and generate Shadow Orbs.</li>
-              <li>Maintain Shadow Word: Pain on a Humming Crystal for the shield.</li>
+              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on adds to trigger <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> and generate Shadow Orbs.</li>
+              <li>Maintain <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> on a Humming Crystal for the shield.</li>
               <li>Stay spread to reduce the chance of being knocked up by the Whirl Turtles.</li>
             </ul>
             <p class="boss-rules">Damage done to Humming Crystal is removed. Heroic: Damage done to Vampiric Cave Bat is removed. Only damage done to Whirl Turtles that cast Shell Concussion counts.</p>
@@ -422,8 +422,8 @@
           <div class="boss-accordion-body" data-boss-body="megaera">
             <ul class="boss-tips">
               <li>Ignore the Venomous Head.</li>
-              <li>Cast Shadow Word: Death on Nether Wyrms to generate Shadow Orbs.</li>
-              <li>Swap to Divine Star if your raid needs extra healing throughput.</li>
+              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Nether Wyrms to generate Shadow Orbs.</li>
+              <li>Swap to <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> if your raid needs extra healing throughput.</li>
             </ul>
             <p class="boss-rules">Damage done to heads that don't die is removed. 25m Heroic: Damage done to Nether Wyrm is removed.</p>
           </div>
@@ -437,8 +437,8 @@
           <div class="boss-accordion-body" data-boss-body="jikun">
             <ul class="boss-tips">
               <li>Use feather charges to intercept Feed Young and gain Primal Nutriment.</li>
-              <li>Cast DoTs on the Nest Guardian. Use Mind Sear and Shadow Word: Death on Hatchlings.</li>
-              <li>Use Vampiric Embrace during Quills if raid is low.</li>
+              <li>Cast DoTs on the Nest Guardian. Use <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> on Hatchlings.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during Quills if raid is low.</li>
             </ul>
             <p class="boss-rules">Ji-Kun is removed from Damage All Star Points.</p>
           </div>
@@ -454,8 +454,8 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="durumu">
             <ul class="boss-tips">
-              <li>Snipe Crimson Fog adds with Shadow Word: Death for Twist of Fate uptime and Shadow Orbs.</li>
-              <li>Cast Halo and DoTs on the Ice Walls.</li>
+              <li>Snipe Crimson Fog adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> for <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> uptime and Shadow Orbs.</li>
+              <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and DoTs on the Ice Walls.</li>
             </ul>
             <p class="boss-rules">Damage done to Wandering Eye is removed.</p>
           </div>
@@ -469,7 +469,7 @@
           <div class="boss-accordion-body" data-boss-body="primordius">
             <ul class="boss-tips">
               <li>Keep DoTs on all Living Fluids (unless your Warlocks know how to play Affliction).</li>
-              <li>Use Cascade on cooldown.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on cooldown.</li>
               <li>Adjust your camera angle to help dodge puddles and avoid unwanted debuffs.</li>
             </ul>
             <p class="boss-rules">Primordius is removed from Damage and Healing All Star Points.</p>
@@ -483,9 +483,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="darkanimus">
             <ul class="boss-tips">
-              <li>DoT as many Anima Golems as possible to maintain Twist of Fate.</li>
-              <li>Use Cascade on cooldown for efficient multi-target damage.</li>
-              <li>Focus your Devouring Plague and Mind Flay: Insanity into the boss.</li>
+              <li>DoT as many Anima Golems as possible to maintain <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a>.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> on cooldown for efficient multi-target damage.</li>
+              <li>Focus your <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> into the boss.</li>
             </ul>
             <p class="boss-rules">Heroic: Damage to Large Anima Golem and Massive Anima Golem is removed. Only count damage done to Anima Golems that die.</p>
           </div>
@@ -502,8 +502,8 @@
           <div class="boss-accordion-body" data-boss-body="ironqon">
             <ul class="boss-tips">
               <li>Recast DoTs on Iron Qon during mount transitions (Ro'shak → Quet'zal → Dam'ren).</li>
-              <li>Hold your 2nd cooldowns and Potion of the Jade Serpent for the final phase, when all four targets are active.</li>
-              <li>Use Vampiric Embrace during Fist Smash if raid is low.</li>
+              <li>Hold your 2nd cooldowns and <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for the final phase, when all four targets are active.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> during Fist Smash if raid is low.</li>
             </ul>
             <p class="boss-rules">Damage done to Ice Tomb is removed.</p>
           </div>
@@ -516,9 +516,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="consorts">
             <ul class="boss-tips">
-              <li>Precast Vampiric Touch on Suen then Shadow Word: Pain before she vanishes.</li>
+              <li>Precast <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> on Suen then <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> before she vanishes.</li>
               <li>Refresh DoTs on Suen during Tears of the Sun.</li>
-              <li>During Nuclear Inferno (boss immune), focus on off-healing. Use Vampiric Embrace when Blazing Radiance stacks get high.</li>
+              <li>During Nuclear Inferno (boss immune), focus on off-healing. Use <a href="https://www.wowhead.com/mop-classic/spell=15286">Vampiric Embrace</a> when Blazing Radiance stacks get high.</li>
             </ul>
             <p class="boss-rules">Damage done to Lurker in the Night is removed.</p>
           </div>
@@ -531,9 +531,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="leishen">
             <ul class="boss-tips">
-              <li>Use Halo and Mind Sear to handle Ball Lightnings.</li>
-              <li>Snipe low adds with Shadow Word: Death to generate Shadow Orbs.</li>
-              <li>Save your CDs and 2nd Potion of the Jade Serpent for Bloodlust.</li>
+              <li>Use <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> and <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> to handle Ball Lightnings.</li>
+              <li>Snipe low adds with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to generate Shadow Orbs.</li>
+              <li>Save your CDs and 2nd <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> for Bloodlust.</li>
             </ul>
             <p class="boss-rules">Damage done to Unharnessed Power, Lesser Diffused Lightning, Greater Diffused Lightning, and Diffused Lightning is removed.</p>
           </div>
@@ -546,9 +546,9 @@
           </button>
           <div class="boss-accordion-body" data-boss-body="raden">
             <ul class="boss-tips">
-              <li>DoT the Crackling Stalker, then burst it with Divine Star and Shadow Word: Death.</li>
-              <li>Snipe the first Essence of Anima with Shadow Word: Death. Burn the remaining ones with Devouring Plague and Mind Flay: Insanity.</li>
-              <li>Sub 40%, use Divine Star on cooldown to help with the HPS check.</li>
+              <li>DoT the Crackling Stalker, then burst it with <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> and <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>.</li>
+              <li>Snipe the first Essence of Anima with <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>. Burn the remaining ones with <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> and <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
+              <li>Sub 40%, use <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> on cooldown to help with the HPS check.</li>
             </ul>
             <p class="boss-rules">Damage done to Sanguine Horror, Corrupted Anima, Corrupted Vita, and Essence of Vita is removed.</p>
           </div>
